[package]
name = "tidy-mac"
version = "0.1.1"
description = "清洁王"
authors = ["yangbuyiya"]
edition = "2021"

[lib]
name = "tidy_mac_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
trash = "5"
walkdir = "2"
